Enhance user interaction and celebration effects with updated status messages and new celebration animations

--- a/index.html
+++ b/index.html
@@ -104,11 +104,14 @@
                     <button id="startButton">Activer le microphone</button>
                     <button id="resetButton">Rallumer la bougie</button>
                 </div>
-                <div class="status" id="status">Cliquez sur "Activer le microphone" et soufflez!</div>
+                <div class="status" id="status">Click on "Activate microphone" and sotiiii!</div>
             </section>
             
             <!-- Countdown and Message Display -->
             <div id="countdown-display" class="hidden"></div>
+
+            <!-- Celebration effects container -->
+            <div id="celebration-container" class="hidden"></div>
 
             <!-- Élément audio caché -->
             <audio id="birthdaySong" loop autoplay>
